--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,6 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p', 'require.resolve("react-native/scripts/react_native_pods.rb", {paths: [process.argv[1]]})', __dir__]).strip
+require_relative '../node_modules/react-native/scripts/react_native_pods'
 
-platform :ios, '14.0'  # Update the minimum iOS version as needed
+platform :ios, '14.0'
 prepare_react_native_project!
 
 linkage = ENV['USE_FRAMEWORKS']
@@ -11,25 +10,24 @@ if linkage
 end
 
 target 'voice_discussion_app' do
-  config = use_native_modules!
+  use_native_modules!
 
   use_react_native!(
-    :path => config[:reactNativePath],
-    # An absolute path to your application root.
+    :path => "../node_modules/react-native",
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNSpeech', :path => '../node_modules/@react-native-community/voice'
+
   target 'voice_discussion_appTests' do
     inherit! :complete
-    # Pods for testing
   end
 
   post_install do |installer|
     react_native_post_install(
       installer,
-      config[:reactNativePath],
+      "../node_modules/react-native",
       :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
     )
   end
 end
