--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/voice": "^1.1.9",
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-native-voice/voice": "^3.1.5",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -22,6 +23,8 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-speech-to-text": "^0.0.8",
+    "react-native-speech-to-text-ios": "^1.0.4",
     "react-native-web": "^0.19.12"
   },
   "devDependencies": {
